--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,8 +25,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pytest --cov=.
-        python -m pytest --cov-report term-missing --cov=user tests/
+        pytest-cov
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
